--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//010.Open\ API\ \uC0AC\uC6A9/2023-02-23_OpenAPI\uB97C\ \uC774\uC6A9\uD55C\ DevOn\ \uC5F0\uACC4_NH\uC190\uD574\uBCF4\uD5D8/\uC0AC\uC6A9\uBC29\uBC95.txt=utf-8
 encoding//136.\uB124\uC774\uBC84\uC2A4\uB9C8\uD2B8\uC5D0\uB514\uD1302/\uC801\uC6A9\uC548\uB0B4.txt=UTF-8
 encoding/README.md=utf-8
